<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="5dp" android:gravity="center_horizontal">

    <LinearLayout android:layout_width="match_parent" android:layout_height="600dp">

        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent" android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light" android:weightSum="1">

                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:layout_height="match_parent" android:paddingBottom="10dp"
                    android:layout_gravity="bottom">

                    <Button android:id="@+id/button_delete" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="0.33"
                        android:text="@string/deleteBut" android:textColor="@android:color/white"
                        android:background="@color/colorAccent" android:onClick="onClickDelete" />

                    <Button android:id="@+id/button_save" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="0.33"
                        android:text="@string/save" android:textColor="@android:color/white"
                        android:background="@color/colorAccent" android:onClick="onClickSave" />

                    <Button android:id="@+id/button_cancel" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="0.33"
                        android:text="@string/cancel" android:textColor="@android:color/white"
                        android:background="@color/colorAccent" android:onClick="onClickCancel" />

                </LinearLayout>

                <LinearLayout android:orientation="horizontal" android:paddingBottom="10dp"
                    android:layout_width="match_parent" android:layout_height="match_parent">

                    <TextView android:text="Дата" android:textSize="20sp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_weight="0.13" android:id="@+id/dataTextViev" />

                    <TextView android:textSize="20sp" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/inputData"
                        android:layout_weight="1.98" />
                </LinearLayout>

                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:paddingBottom="10dp" android:layout_height="match_parent">

                    <TextView android:text="Категория" android:textSize="20sp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/category" />

                    <Spinner android:id="@+id/spinner_category" android:layout_width="wrap_content"
                        android:textSize="20sp" android:layout_height="wrap_content"
                        android:background="@android:color/background_light"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:textSize="20sp"
                        android:text="Описание" android:id="@+id/description" />

                    <EditText android:id="@+id/edit_description" android:textSize="20sp"
                        android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:paddingBottom="10dp" android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView android:layout_width="wrap_content" android:textSize="20sp"
                        android:layout_height="wrap_content" android:text="@string/time_start"
                        android:id="@+id/timeStart" />

                    <TextView android:layout_width="0dp" android:textSize="20sp"
                        android:layout_height="wrap_content" android:id="@+id/inputTimeStart"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:paddingBottom="10dp" android:layout_height="match_parent">

                    <TextView android:text="@string/time_end" android:textSize="20sp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/finishTime" />

                    <TextView android:layout_width="0dp" android:textSize="20sp"
                        android:layout_height="wrap_content" android:id="@+id/inputTimeFinish"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginBottom="10dp">

                    <Button android:id="@+id/button_make_photo" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:background="@color/colorAccent" android:paddingLeft="10dp"
                        android:paddingRight="10dp" android:text="@string/add_photo"
                        android:onClick="onClickAddPhoto" />

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" android:text="@string/photo" />

                    <LinearLayout android:id="@+id/linear_photo" android:orientation="vertical"
                        android:layout_width="match_parent" android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>